--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,6 @@
 FROM mcr.microsoft.com/devcontainers/python:1-3.12-bookworm
+# OCI Labels
+LABEL org.opencontainers.image.source="https://github.com/xxl4tomxu98/my_ansible"
 # install poetry for python dependencies
 RUN python3 -m pip install poetry~=1.8.3
 # enable bash completion for git
