--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -12,6 +12,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Build and push the image
         run: |
-          docker login --username xxl4tomxu98 --password-stdin ${{ secrets.TOM_HTTPS_TOKEN }} ghcr.io
+          docker login --username xxl4tomxu98 --password ${{ secrets.TOM_HTTPS_TOKEN }} ghcr.io
           docker build ../../.devcontainer --tag ghcr.io/xxl4tomxu98/my_ansible:latest
           docker push ghcr.io/xxl4tomxu98/my_ansible:latest
