add provenance to devcontainer build

--- a/.github/workflows/build-devcontainer.yaml
+++ b/.github/workflows/build-devcontainer.yaml
@@ -51,3 +51,4 @@ jobs:
           file: .devcontainer/Dockerfile
           labels: ${{ steps.metadata.outputs.labels }}
           tags: ${{ steps.metadata.outputs.tags }}
+          provenance: false
