--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,11 +10,11 @@ RUN echo "source /usr/share/bash-completion/completions/git" >> ~/.bashrc
 
 WORKDIR /workspaces/my_ansible
 
-COPY poetry.lock pyproject.toml ./
+COPY poetry.lock pyproject.toml .
 
-RUN chown -R vscode:vscode /workspaces
+# RUN chown -R vscode:vscode /workspaces
 
-USER vscode
+# USER vscode
 
 RUN poetry install
 
