--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,13 +3,13 @@
 {
 	"name": "My-Ansible-2024",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	// "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm"	
-	//"build": {
-	//	"dockerfile": "Dockerfile",
-	//	"context": ".."
-	//},
-	"image": "ghcr.io/xxl4tomxu98/my_ansible:latest",
-	
+	// "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm"
+	"build": {
+		"dockerfile": "Dockerfile",
+		"context": ".."
+	},
+	//"image": "ghcr.io/xxl4tomxu98/my_ansible:latest",
+
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
@@ -22,7 +22,7 @@
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
-			"extensions": [				
+			"extensions": [
 				"bierner.markdown-preview-github-styles",
 				"DavidAnson.vscode-markdownlint",
 				"dhoeric.ansible-vault",
@@ -37,11 +37,11 @@
 				"redhat.ansible",
 				"samuelcolvin.jinjahtml",
 				"tamasfe.even-better-toml",
-				"yzhang.markdown-all-in-one"				
+				"yzhang.markdown-all-in-one"
 			],
-			"settings": {				
-				"ansible.python.interpreterPath": "/venv/bin/python3",				
-				"python.defaultInterpreterPath": "/venv/bin/python3",								
+			"settings": {
+				"ansible.python.interpreterPath": "/venv/bin/python3",
+				"python.defaultInterpreterPath": "/venv/bin/python3",
 				"[python]": {
 					"editor.codeActionsOnSave": {
 						"source.organizeImports": "explicit"
@@ -53,7 +53,7 @@
 					"*.yml": "ansible"
 				},
 				"files.trimFinalNewlines": true,
-				"files.trimTrailingWhitespace": true			
+				"files.trimTrailingWhitespace": true
     		}
 		}
 	},
