--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,6 +42,7 @@
 			"settings": {
 				"ansible.python.interpreterPath": "/venv/bin/python3",
 				"python.defaultInterpreterPath": "/venv/bin/python3",
+				
 				"[python]": {
 					"editor.codeActionsOnSave": {
 						"source.organizeImports": "explicit"
@@ -56,7 +57,7 @@
 				"files.trimTrailingWhitespace": true
     		}
 		}
-	},
+	}
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "root"
+	//"remoteUser": "root"
 }
