add nginx installation playbook

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,7 +16,7 @@ RUN echo "source /usr/share/bash-completion/completions/git" >> ~/.bashrc
 
 WORKDIR /workspaces/my_ansible
 
-COPY poetry.lock pyproject.toml .
+COPY poetry.lock pyproject.toml ./
 
 RUN chown -R vscode:vscode /workspaces
 
