--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 ansible-core = "2.17.4"
+ansible-lint = "^24.9.2"
 
 [build-system]
 requires = ["poetry-core"]
