change package to ansible.builtin.package remove ansible-lint

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -41,8 +41,8 @@
 				"yzhang.markdown-all-in-one"
 			],
 			"settings": {
-				"ansible.python.interpreterPath": "/venv/bin/python3",
-				"python.defaultInterpreterPath": "/venv/bin/python3",
+				"ansible.python.interpreterPath": "/home/vscode/venv/bin/python3",
+				"python.defaultInterpreterPath": "/home/vscode/venv/bin/python3",
 
 				"[python]": {
 					"editor.codeActionsOnSave": {
